gnunet (0.8.0c-1-1ubuntu0~ppa1) jaunty; urgency=low

  * Backport from sid
  * changed Maintainer field in debian/control 
  * deleted gnunet-download-manager.scm

 -- Markus Golser <elmargol@googlemail.com>  Sat, 25 Apr 2009 16:03:30 +0200

gnunet (0.8.0c-1) unstable; urgency=low

  * Merging upstream version 0.8.0c (Closes: #520427).
  * Building with http transport support (Closes: #519810).
  * Updating package to standards 3.8.1.
  * Removing old conflicts and replaces.

 -- Daniel Baumann <daniel@debian.org>  Sun,  5 Apr 2009 13:12:00 +0200

gnunet (0.8.0b-5) unstable; urgency=low

  * Making use of code from cdbs' clean-la.mk file to clear the
    dependency_libs field in all .la files in the gnunet-dev static
    libraries.
  * Removing Arnaud from uploaders, he is MIA (Closes: #513162).
  * Updating year in copyright file.
  * Updating debconf operations.

 -- Daniel Baumann <daniel@debian.org>  Thu,  5 Feb 2009 00:08:00 +0100

gnunet (0.8.0b-4) unstable; urgency=low

  * Removing config.guess and config.sub in clean target of rules.
  * Adding db_stop call in gnunet-server.postinst to properly stop
    debconf interactions.
  * Replacing obsolete dh_clean -k with dh_prep.
  * Adding '|| true' to gnunet-update call, this way a hanging gnunet-
    update can be aborted in a (almost) sane way. Also see
    https://gnunet.org/mantis/view.php?id=1349 (Closes: #506264).

 -- Daniel Baumann <daniel@debian.org>  Thu, 20 Nov 2008 07:16:00 +0100

gnunet (0.8.0b-3) unstable; urgency=low

  * Adding libmicrohttpd-dev to gnunet-dev depends.
  * Adding gnunet-server to gnunet-client suggests.
  * Adding note about requiring gnunet-server in gnunet-client package
    long-description.

 -- Daniel Baumann <daniel@debian.org>  Fri, 19 Sep 2008 10:49:00 +0200

gnunet (0.8.0b-2) unstable; urgency=low

  * Updating vcs fields in control file.
  * Building gnunet on all architectures again, guile-1.8 on ia64 is back.
