@@ -11,22 +11,22 @@
 /usr/bin/gnunet-tracekit
 /usr/bin/gnunet-unindex
 /usr/bin/gnunet-vpn
-/usr/lib/libgnunetchat_api.so.*
+/usr/lib/libgnunetchatapi.so.*
 /usr/lib/libgnunetcollection.so.*
-/usr/lib/libgnunetdht_api.so.*
+/usr/lib/libgnunetdhtapi.so.*
 /usr/lib/libgnunetecrs.so.*
-/usr/lib/libgnunetecrs_core.so.*
+/usr/lib/libgnunetecrscore.so.*
 /usr/lib/libgnunetfs.so.*
 /usr/lib/libgnunetfsui.so.*
-/usr/lib/libgnunetgetoption_api.so.*
-/usr/lib/libgnunetidentity_api.so.*
+/usr/lib/libgnunetgetoptionapi.so.*
+/usr/lib/libgnunetidentityapi.so.*
 /usr/lib/libgnunetnamespace.so.*
-/usr/lib/libgnunetremote_api.so.*
-/usr/lib/libgnunetrpc_util.so.*
-/usr/lib/libgnunetstats_api.so.*
-/usr/lib/libgnunettesting_api.so.*
-/usr/lib/libgnunettracekit_api.so.*
-/usr/lib/libgnunettraffic_api.so.*
+/usr/lib/libgnunetremoteapi.so.*
+/usr/lib/libgnunetrpcutil.so.*
+/usr/lib/libgnunetstatsapi.so.*
+/usr/lib/libgnunettestingapi.so.*
+/usr/lib/libgnunettracekitapi.so.*
+/usr/lib/libgnunettrafficapi.so.*
 /usr/lib/libgnuneturitrack.so.*
 /usr/share/man/man1/gnunet-auto-share.1
 /usr/share/man/man1/gnunet-chat.1
